# robot_description

./: .gitignore  README.md
docker_scripts/: Dockerfile  docker_build_image.sh  docker_connect.sh  docker_run_container.sh
src/rl_fratomo_description/: CMakeLists.txt  README.md  package.xml
src/rl_fratomo_description/conf/: fratomo_conf_ros2.rviz
src/rl_fratomo_description/launch/: display_fratomo.launch.py  spawn_fratomo_gazebo.launch.py
src/rl_fratomo_description/meshes/armando_grasp_marker/: grasp_cilindro.stl  grasp_marker.stl  grasp_quad.stl
src/rl_fratomo_description/urdf/: d435_gazebo_macro.xacro  fratomo.xacro  fratomo_base_macro.xacro  lidar_gazebo_macro.xacro
